# advent-of-code

./: .gitignore  pyproject.toml  readme.md
advent_of_code/: __init__.py  __main__.py  read_input.py  solution_template.py  template_tests.py
advent_of_code/y2024/day1/Le dave du 34/: solution.py
advent_of_code/y2024/day1/david/: solution.py
advent_of_code/y2024/day1/filippo/: solution.py
advent_of_code/y2024/day1/max/: solution.py
advent_of_code/y2024/day10/david/: solution.py  tests.py
advent_of_code/y2024/day10/filippo/: solution.py  tests.py
advent_of_code/y2024/day10/max/: solution.py  tests.py
advent_of_code/y2024/day11/david/: sample_input.txt  solution.py  tests.py
advent_of_code/y2024/day11/filippo/: solution.py  tests.py
advent_of_code/y2024/day11/max/: solution.py  tests.py
advent_of_code/y2024/day12/david/: solution.py  tests.py
advent_of_code/y2024/day12/max/: solution.py  tests.py
advent_of_code/y2024/day13/max/: solution.py  tests.py
advent_of_code/y2024/day14/max/: solution.py  tests.py
advent_of_code/y2024/day2/david/: solution.py
advent_of_code/y2024/day2/filippo/: solution.py  tests.py
advent_of_code/y2024/day2/max/: solution.py
advent_of_code/y2024/day3/david/: solution.py
advent_of_code/y2024/day3/filippo/: solution.py  tests.py
advent_of_code/y2024/day3/max/: solution.py
advent_of_code/y2024/day4/david/: solution.py
advent_of_code/y2024/day4/filippo/: solution.py  tests.py
advent_of_code/y2024/day4/max/: solution.py
advent_of_code/y2024/day5/david/: solution.py
advent_of_code/y2024/day7/max/: tests.py  (+1 more)
(+97 files in other folders)
