[tool.poetry]
package-mode = false
name = "advent-of-code"
description = "CLI to store and run Advent of Code puzzles"
authors = ["Filippo Pisello"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~=3.12.0"

[tool.poetry.group.dev.dependencies]
black = "~=24.10"
pytest = "~=8.3"

[tool.poetry.group.david.dependencies]
numpy = "^2.1.3"
z3-solver = "^4.15.4.0"
